k8s-voting-app/frontend/result-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: result
  name: result
spec:
  replicas: 1
  selector:
    matchLabels:
      app: result
  template:
    metadata:
      labels:
        app: result
    spec:
      containers:
      - image: quay.io/rhgps/votingapp_result
        name: result
        ports:
        - containerPort: 80
          name: result
